# otterbrix

./: CMakeLists.txt  CMakeUserPresets.json
build-docker/components/catalog/tests/: DartConfiguration.tcl  test_catalog_include-b12d07c.cmake
build-docker/components/cursor/tests/: DartConfiguration.tcl  test_cursor_include-b12d07c.cmake
build-docker/components/document/test/: DartConfiguration.tcl  test_new_document_base_include-b12d07c.cmake
build-docker/components/expressions/test/: DartConfiguration.tcl  test_expressions_include-b12d07c.cmake
build-docker/components/index/test/: DartConfiguration.tcl  test_index_include-b12d07c.cmake
build-docker/components/oid/test/: DartConfiguration.tcl  test_oid  test_oid_include-b12d07c.cmake  test_oid_tests-b12d07c.cmake
build-docker/core/tests/: DartConfiguration.tcl  test_core  test_core_include-b12d07c.cmake  test_core_tests-b12d07c.cmake
components/: CMakeLists.txt
components/logical_plan/: node.cpp  node.hpp
components/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.hpp
components/optimizer/cbo/: candidate_plan.hpp  cost_model.cpp  cost_model.hpp  enumerator.cpp  enumerator.hpp  estimator.cpp  estimator.hpp  stats_provider.cpp  stats_provider.hpp
components/optimizer/rules/: conjunction_simplification.cpp  conjunction_simplification.hpp  push_down.cpp  push_down.hpp
components/optimizer/test/: CMakeLists.txt  test_conjunction_simplification.cpp  test_enumerator.cpp  test_push_down.cpp  test_push_down_manual.cpp  СMakeLists.txt
components/planner/: CMakeLists.txt  planner.cpp
(+46 files in other folders)
